--- a/00_im.html
+++ b/00_im.html
@@ -74,7 +74,7 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>기억에 남는 장면.</strong>기억에 남는 장면 <code>ㅇㅇ</code>ㅇㅇ
+              <strong>대학생의 모습</strong>기억에 남는 장면 <code>버스를 타고있는</code>나
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>기억에 남는</strong> <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>열심히 일하는</strong>피곤해보이는 <code>일꾼의 모습</code>자랑스럽다
             </div>
           </div>
         </div>
